# ai-ml-mlops-katas

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
notebooks/: tests.ipynb
src/monitoring/: drift_detection.py
src/pipelines/: data_validation.py  preprocessing.py  training_pipeline.py
tests/: test_preprocessing.py  test_validations.py
